--- a/AMLTPVCocina/src/amltpvcocina/MesasDialog.form
+++ b/AMLTPVCocina/src/amltpvcocina/MesasDialog.form
@@ -53,6 +53,7 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okButtonActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="okButtonKeyPressed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="cancelButton">
